# StockMixer

./: .gitignore  pyproject.toml
src/: app.py  evaluator.py  load_data.py  model.py  runner.py  train.py
